Template and build update

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,7 @@
-<nav>---<br /><a href="/about">About this blog</a></nav> 
-</body>  
+<nav>---<br /><a href="/about">About this blog</a></nav>
+<footer class="footer is-center">
+    <p>Stovby Klit Grundejerforening ©</p>
+</footer>
+</body>
+
 </html>
