--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,43 @@
-{{> header }}
-    <h1>{{ site.name }}</h1>
+{{> header }} 
 
-    <ul class="recent">
-    {{#each articles }}
-      <li>
-        <div class="title"><a href="{{ path }}">{{ title }}</a></div>
-        <div class="date">{{ date }}</div>
-      </li>
+{{> menu }}
+
+<div class="banner">
+  <h1 class="banner-head">
+    {{ site.name }}
+  </h1>
+</div>
+<div class="main-content">
+  <div class="pure-u-1 is-center">
+    {{{ contents }}}
+  </div>
+  <div class="pure-g posts">
+    <div class="pure-u-1">
+      <h1 class="content-subhead">Seneste Nyheder</h1>
+    </div>
+
+    {{#each latestArticles }}
+    <article class="pure-u-1 pure-u-md-1-3 post">
+      <header class="post-header">
+
+        <h2 class="post-title"><a href="{{ path }}">{{ title }}</a></h2>
+
+        <p class="post-meta">
+          By
+          <time class="post-author">{{ date }}</time> under <a class="post-category post-category-js" href="#">JavaScript</a>
+        </p>
+      </header>
+
+      <div class="post-description">
+        <p>
+          {{ excerpt }}
+        </p>
+      </div>
+      <div class="read-more">
+        <a class="pure-button pure-button-primary" href="{{ path }}">Læs mere</a>
+      </div>
+    </article>
     {{/each}}
-    </ul>
-
+  </div>
+</div>
 {{> footer }}
