--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{{#if title }}{ {title }} - {{/if}}{{ site.name }}</title>
+    <title>{{#if title }}{{title }} - {{/if}}{{ site.name }}</title>
     <meta name="description" content="{{#if blurb}}{{ blurb }}{{else}}{{#if description}}{{ description }}{{else}}{{ site.description }}{{/if}}{{/if}}" />
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css">
+    <!--[if lte IE 8]>
+        <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-old-ie-min.css">
+    <![endif]-->
+    <!--[if gt IE 8]><!-->
+    <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/grids-responsive-min.css">
+    <!--<![endif]-->
+    <link rel="stylesheet" href="../assets/styles.css">
   </head>
   <body>
