--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,7 +1,14 @@
 <header class="main-header">
+    <div class="logo">
+        <img src="../assets/img/stovbyklit-logo.png" alt="">
+        <div class="site-description">
+            <h3 class="sitename sitetitle"><a href="/">Stovby Klit Grundejerforening</a></h3>
+            <p class="tagline">Foreningens formål er at varetage grundejernes interesse.</p>
+        </div>
+    </div>
     <div class="pure-menu pure-menu-horizontal">
         <ul class="pure-menu-list">
-            <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
+            <li class="pure-menu-item pure-menu-selected"><a href="#" id="menuLink1" class="pure-menu-link">About</a></li>
             <li class="pure-menu-item pure-menu-has-children pure-menu-allow-hover">
                 <a href="#" id="menuLink1" class="pure-menu-link">Contact</a>
                 <ul class="pure-menu-children">
